# Autocoder-collab

./: .gitignore  implementation.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.antigravitycli/: f3af1d07-4f34-4a92-8fea-49d25a4d38f9.json
apps/api-server/: learning-data.json  package.json  tsconfig.json
apps/api-server/.replit-artifact/: artifact.toml
apps/api-server/src/: app.ts  index.ts
apps/api-server/src/__tests__/: ruflo-core.test.ts
apps/api-server/src/mcp/: server.ts  tools.ts  types.ts
apps/api-server/src/routes/: ai.ts  auto-fix.ts  cache.ts  conversations-store.ts  conversations.ts  diagnostics.ts  index.ts  logs.ts  mcp.ts  modules.ts  plan-graph.ts  plugins.ts  preview.ts  prompt.ts  repair.ts  slm.ts  stacks.ts  telemetry.ts
apps/api-server/src/src/: index.ts  storage.ts
apps/desktop/: Cargo.toml  README.md  build-instructions.md  tauri.conf.json
apps/desktop/src/: main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/.replit-artifact/: artifact.toml
apps/web/shared/: schema.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: IntelligencePanel.tsx  LogViewer.tsx  PlanGraphView.tsx  auto-run-preview.tsx  chat-input.tsx  chat-message.tsx  code-block.tsx  code-preview.tsx  code-runner.tsx  deployment-panel.tsx  (+17 more)
scripts/: restore-legacy.sh  verify-sync.sh
scripts/src/: octokit-push-changes.mjs  octokit-push-docs.mjs  octokit-push.mjs  test-app-archetypes.ts  test-complexity-classifier.ts
src/src/modules/: dynamic-logger.ts
(+315 files in other folders)
