[package]
name = "autocoder-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AutoCoder Desktop — Tauri shell"
authors = ["AutoCoder Contributors"]
license = "MIT"

[lib]
name = "autocoder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
